Adiabatic theorem stated

--- a/Adiabatic/progress.tex
+++ b/Adiabatic/progress.tex
@@ -5,6 +5,6 @@
 \begin{document}
  \section*{\LARGE{Adiabatic Theorem}}
  \begin{Large}
-  This 
+  Let a system be in an eigenstate $\psi_n^i$ of the system. Now consider a case in which the Hamiltonian of the system starts changing in time. The adiabatic theorem states that if this change occurs slow enough, the system will remain in the $n^{th}$ eigenstate $\psi_n^i$ of the system at time t.
  \end{Large}
 \end{document}
