modified the internal consistency slide

--- a/MS_Project_presentation/MS_Project.tex
+++ b/MS_Project_presentation/MS_Project.tex
@@ -148,7 +148,9 @@ where $\zeta$ is a random rumber between 0 and 1.}
     \begin{equation}
 	\frac{N^\alpha}{N^T} = \frac{1}{N^T}\sum_{j=1}^{N^T} \rho_{\alpha\alpha}^j
 	\end{equation}
-	Eqn(14) is called the internal consistency of FSSH.
+	Eqn(14) is called the internal consistency of FSSH.\\
+	\vspace{1cm}
+	Tully's FSSH algorithm is known to be internally inconsistent. Lets understand why?...
 	
 	\end{frame}
 	
