modified the NAC and nuclear propagation images

--- a/MS_Project_presentation/MS_Project.tex
+++ b/MS_Project_presentation/MS_Project.tex
@@ -19,7 +19,7 @@
 	\end{frame}
 	
 	\begin{frame}[t]{The Born-Oppenheimer Approximation (BOA)}
-	The electronic degrees of freedom can be seperated from nuclear degrees of freedom due to heavy masss of the nuclei and so we have;
+	Due to heavy mass of the nuclei, we can quite accurately assume that the nuclear motion doesn't effect the electronic motion and thus we can seperate the electronic and nuclear degrees of freedom;
 	\begin{equation}
 	\hat{H}_{mol} = \hat{H}_{e^-} + \hat{H}_{Nu}
 	\end{equation}
@@ -68,16 +68,18 @@
     
 	\begin{frame}[t]{Non-adiabatic coupling}
 	\begin{figure}
-	\includegraphics[scale=0.35]{FSSH_aim.png}
+	\includegraphics[scale=0.20]{NAC_elious.png}
 	\caption{NAC}
 	\end{figure}
 	\end{frame}     	
 	
 	\begin{frame}[t]{What we want to simulate...}
+	\begin{center}
 	\begin{figure}
-	\includegraphics[scale=0.55]{FSSH_goal.png}
-	\caption{NAC}
+	\includegraphics[width=1.1\linewidth, height=0.6\linewidth]{nuclear_propagation.jpg}
+	\caption{Nuclear wavepacket propagation}
 	\end{figure}
+	\end{center}
 	\end{frame}
 	
 
