corrected schematic labelling of excited state diagram

--- a/MS_Project_presentation/MS_Project.tex
+++ b/MS_Project_presentation/MS_Project.tex
@@ -19,7 +19,7 @@
 	\end{frame}
 	
 	\begin{frame}[t]{The Born-Oppenheimer Approximation (BOA)}
-	Due to heavy mass of the nuclei, we can quite accurately assume that the nuclear motion doesn't effect the electronic motion and thus we can seperate the electronic and nuclear degrees of freedom;
+	Due to heavy mass of the nuclei, we can quite accurately assume that the nuclear motion doesn't effect the electronic degrees of freedom and thus we can seperate the electronic and nuclear degrees of freedom;
 	\begin{equation}
 	\hat{H}_{mol} = \hat{H}_{e^-} + \hat{H}_{Nu}
 	\end{equation}
@@ -33,7 +33,7 @@
 	\begin{frame}[t]{Non-adiabatic processes, An example...}
 	\begin{figure}
 	\includegraphics[scale=0.50]{NAD.png}
-	\caption{Non-adiabaticity in excited states}
+	\caption{Schematic of non-adiabaticity in excited states}
 	\end{figure}
 	\end{frame}
 	
