added proper NAD picture

--- a/MS_Project_presentation/MS_Project.tex
+++ b/MS_Project_presentation/MS_Project.tex
@@ -32,7 +32,7 @@
 	
 	\begin{frame}[t]{Non-adiabatic processes, An example...}
 	\begin{figure}
-	\includegraphics[scale=0.50]{NAD.png}
+	\includegraphics[scale=0.55]{Elious-PES.png}
 	\caption{Schematic of non-adiabaticity in excited states}
 	\end{figure}
 	\end{frame}
